--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   app:
     # Go実装の場合は golang/ PHP実装の場合は php/
-    build: ruby/
+    build: python/
     environment:
       ISUCONP_DB_HOST: mysql
       ISUCONP_DB_PORT: 3306
